--- a/force-app/main/default/lwc/childCmp/childCmp.html
+++ b/force-app/main/default/lwc/childCmp/childCmp.html
@@ -1,5 +1,5 @@
 <template>
     <lightning-card title="Child Component" icon-name="standard:account">
-        <p>{getValueFromParent}</p>
+        <p>{greetings}</p>
     </lightning-card>
 </template>
