--- a/force-app/main/default/lwc/parentCmp/parentCmp.html
+++ b/force-app/main/default/lwc/parentCmp/parentCmp.html
@@ -1,5 +1,5 @@
 <template>
     <lightning-card title="Parent Component">
-        <c-child-cmp get-value-from-parent={value}></c-child-cmp>
+        <c-child-cmp greetings={parentGreetings}></c-child-cmp>
     </lightning-card>
 </template>
